[gd_scene load_steps=15 format=3 uid="uid://c7cqxasj1xdtp"]

[ext_resource type="Script" uid="uid://cfh0mobad77ud" path="res://Codes/player.gd" id="1_ni73s"]
[ext_resource type="SpriteFrames" uid="uid://bsw2axaxqmuly" path="res://Scenes/Object/PlayerAnimHood.tres" id="2_fkybt"]
[ext_resource type="Texture2D" uid="uid://chmnidp7xjaes" path="res://Assets/Sprite/MetroidvaniaAsset/Char/herochar_spritesheet(new).png" id="2_vgqql"]
[ext_resource type="AudioStream" uid="uid://fqykq2oqlpr4" path="res://Assets/Sound/Jump.wav" id="4_vgqql"]
[ext_resource type="AudioStream" uid="uid://d0x3437cxlpgv" path="res://Assets/Sound/attack.wav" id="5_fkybt"]
[ext_resource type="AudioStream" uid="uid://dtwy4buhlgnka" path="res://Assets/Sound/dash.wav" id="6_ggc2y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vw006"]
atlas = ExtResource("2_vgqql")
region = Rect2(0, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggc2y"]
atlas = ExtResource("2_vgqql")
region = Rect2(16, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgx5c"]
atlas = ExtResource("2_vgqql")
region = Rect2(32, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vj83"]
atlas = ExtResource("2_vgqql")
region = Rect2(48, 224, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fd4e3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw006")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggc2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgx5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vj83")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tx1dd"]
radius = 5.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ni73s"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkybt"]
size = Vector2(12, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
top_level = true
script = ExtResource("1_ni73s")

[node name="PlayerAnim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = ExtResource("2_fkybt")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="SlashEffect" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(16, -8)
sprite_frames = SubResource("SpriteFrames_fd4e3")
animation = &"attack"

[node name="PlayerCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_tx1dd")

[node name="SwordArea" type="Area2D" parent="." groups=["enemies"]]
metadata/_edit_group_ = true

[node name="SwordCol" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(16, -8)
shape = SubResource("RectangleShape2D_ni73s")
debug_color = Color(0.776056, 0.140232, 1, 0.42)

[node name="DetectArea" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="DetectCol" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_fkybt")
debug_color = Color(0.948772, 3.65794e-06, 0.576708, 0.42)

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]

[node name="Node" type="Node" parent="."]

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("4_vgqql")
volume_db = 5.0

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("5_fkybt")
volume_db = 3.0

[node name="DashSFX" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("6_ggc2y")
volume_db = 5.0

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="Node"]

[node name="DeadSFX" type="AudioStreamPlayer2D" parent="Node"]

[connection signal="body_entered" from="SwordArea" to="." method="_on_sword_area_body_entered"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
